--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
         run: npm test --if-present -- --ci
 
       - name: Expo Doctor
-        run: npx expo doctor
+        run: npx expo-doctor
