--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,86 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# --- Node / Expo
 node_modules/
-
-# Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
-expo-env.d.ts
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
+# --- TypeScript
 *.tsbuildinfo
 
-app-example
+# --- OS / IDE
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.iml
+
+# --- Env / Secrets
+.env
+.env*.local
+*.pem
+*.p12
+*.p8
+*.key
+*.jks
+*.mobileprovision
+
+# --- Metro / Cache
+.metro-health-check*
+.cache/
+tmp/
+
+# --- Expo generated typings
+expo-env.d.ts
+
+# --- Project examples / local-only
+app-example/
+
+# =========================
+# iOS (prebuild)
+# =========================
+ios/build/
+ios/Pods/
+ios/Podfile.lock
+ios/*.xcworkspace/xcshareddata/WorkspaceSettings.xcsettings
+ios/**/xcuserdata/
+ios/**/project.xcworkspace/xcuserdata/
+ios/**/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+ios/**/project.pbxproj.user*
+ios/**/project.pbxproj.user.*.pbxuser
+ios/**/DerivedData/
+# If you use fastlane and don’t want to commit outputs:
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots/
+fastlane/test_output/
+
+# =========================
+# Android (prebuild)
+# =========================
+android/.gradle/
+android/.idea/
+android/captures/
+android/local.properties
+android/**/build/
+android/**/release/
+android/**/debug/
+android/**/generated/
+android/**/release-notes/
+android/app/release/
+android/app/debug/
+android/gradle/wrapper/gradle-wrapper.jar
+
+# --- Keystore (never commit)
+*.keystore
+*.jks
+
+# --- EAS / Build artifacts (optional)
+.easlrc
+*.ipa
+*.apk
+*.aab
