--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "dotenv": "^17.2.3",
     "expo": "~53.0.20",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
