--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "dotenv": "^17.2.3",
-    "expo": "^54.0.21",
+    "expo": "~54.0.25",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
     "expo-clipboard": "^8.0.7",
@@ -28,13 +28,13 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "lucide-react-native": "^0.539.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
